Desafio Complementario Clase 15

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
             <div class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./multimedia/HOUSE OF ROCK.jpg" class="d-block w-100" alt="logo">
+                  <img src="./multimedia/HOUSE OF ROCK.jpg" class="d-block w-100" class="img-fluid" alt="logo">
                 </div>
                 <div class="carousel-item">
-                  <img src="./multimedia/home2.jpg" class="d-block w-100" alt="foto">
+                  <img src="./multimedia/home2.jpg" class="d-block w-100" class="img-fluid" alt="foto">
                 </div>
                 <div class="carousel-item">
-                  <img src="./multimedia/home3.jpg" class="d-block w-100" alt="foto">
+                  <img src="./multimedia/home3.jpg" class="d-block w-100" class="img-fluid" alt="foto">
                 </div>
                 <div class="carousel-item">
-                  <img src="./multimedia/home4.jpg" class="d-block w-100" alt="foto">
+                  <img src="./multimedia/home4.jpg" class="d-block w-100" class="img-fluid" alt="foto">
                 </div>
               </div>
             </div>
