--- a/index.html
+++ b/index.html
@@ -48,14 +48,12 @@
     <!--INICIO DEL CONTENIDO PRINCIPAL-->
     <main>
         <h1 id="tituloPrincipal">¡Bienvenido!</h1>
+        <div class="logo"><img src="./multimedia/logo.jpg" alt="logo"></div>
         <div id="mainContent">
             <p class="textoInicial">Somos tu solución en equipamiento para músicos. El talento, la creatividad y la personalidad sobre el escenario los ponés vos. El resto, te lo conseguimos nosotros.</p>
             <div class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./multimedia/HOUSE OF ROCK.jpg" class="d-block w-100" class="img-fluid" alt="logo">
-                </div>
-                <div class="carousel-item">
                   <img src="./multimedia/home2.jpg" class="d-block w-100" class="img-fluid" alt="foto">
                 </div>
                 <div class="carousel-item">
