--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--INICIO DEL CONTENIDO PRINCIPAL-->
     <main>
         <h1 id="tituloPrincipal">¡Bienvenido!</h1>
-        <div class="logo"><img src="./multimedia/logo.jpg" alt="logo"></div>
+        <div class="logo"><img src="./multimedia/logo.jpg" alt="logo" class="logo__imagen"></div>
         <div id="mainContent">
             <p class="textoInicial">Somos tu solución en equipamiento para músicos. El talento, la creatividad y la personalidad sobre el escenario los ponés vos. El resto, te lo conseguimos nosotros.</p>
             <div class="carousel slide" data-bs-ride="carousel">
