Cambio footer imagenes espacio index

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -105,7 +105,7 @@
     <!--FIN DEL CONTENIDO PRINCIPAL-->
     <!--INICIO DEL FOOTER-->
     <footer class="footer"> 
-      <p id="bottomText" class="footer__disclaimer">"House of Rock" es una marca registrada de Musicos Felices S.A.S., con sede social sita en Av Siempreverde 732 de la localidad de Santa Cruz de la Vinchuca, provincia de Córdoba. Todos los derechos reservados. </p>
+      <p id="bottomText" class="footer__disclaimer">Marca registrada de Musicos Felices S.A.S. Todos los derechos reservados. </p>
       <ul class="footer__list">
           <li><a href="#" class="footer__link"><i class="fab fa-facebook-square"></i></a></li>
           <li><a href="#" class="footer__link"><i class="fab fa-instagram-square"></i></a></li>
