padding texto SN y arreglo links galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -54,7 +54,7 @@
                     <li><a href="#amplis" class="productos__opciones">Amplificadores</a></li>
                 </ul>
             </nav>
-            <h2 class="productos__guitarra__titulo">Guitarras</h2>
+            <h2 class="productos__guitarra__titulo" id="guitarras">Guitarras</h2>
             <div class="productos__guitarra__imagen">
                 <img src="../multimedia/Fender_Stratocaster_004-2-removebg-preview.png" alt="Fender Stratocaster" id="guitarOne">
                 <img src="../multimedia/Fender_Telecaster_American_Vintage_1952_transparent.png" alt="Fender Telecaster" id="guitarTwo">
@@ -65,7 +65,7 @@
                 <p class="productos__guitarra__nombre">Fender Telecaster</p>
                 <p class="productos__guitarra__nombre">Gibson Les Paul</p>
             </div>        
-            <h2 class="productos__bajo__titulo">Bajos</h2>
+            <h2 class="productos__bajo__titulo" id="bajos">Bajos</h2>
             <div class="productos__bajo__imagen"> 
                 <img src="../multimedia/fender-squier-mini-precision-bass-il-black_1_BAS0011010-000-removebg-preview.png" alt="Fender Squire Mini Precission" id="bassOne">
                 <img src="../multimedia/Fender-Standard-Jazz-Bass-Mexico-1-20635-1-removebg-preview.png" alt="Fender Standard Jazz Bass" id="bassTwo">
@@ -76,7 +76,7 @@
                 <p class="productos__bajo__nombre">Fender Standard Jazz</p>
                 <p class="productos__bajo__nombre">Ibanez GSR100EXBK</p>
             </div>
-            <h2 class="productos__bateria__titulo">Baterias</h2>
+            <h2 class="productos__bateria__titulo" id="baterias">Baterias</h2>
             <div class="productos__bateria__imagen">
                 <img src="../multimedia/bateria-acustica-shell-Ludwig-LC179X016-removebg-preview.png" alt="Set Ludwig Breakbeats" id="drumsOne">
                 <img src="../multimedia/bateria-musical-Tama-Club-Jam-removebg-preview.png" alt="Set Tama Club Jam" id="drumsTwo">
@@ -87,7 +87,7 @@
                 <p class="productos__bateria__nombre">Set Tama Club Jam</p>
                 <p class="productos__bateria__nombre">Set Pearl Masters</p>
             </div>
-            <h2 class="productos__amp__titulo">Amplificadores</h2>
+            <h2 class="productos__amp__titulo" id="amplis">Amplificadores</h2>
             <div class="productos__amp__imagen">
                 <img src="../multimedia/Ampli-Fender-Champion-removebg-preview.png" alt="Fender Champion" id="ampOne">
                 <img src="../multimedia/Ampli-Valvular-Marshall-removebg-preview.png" alt="Marshall Valvular" id="ampTwo">
