animaciones en la rama

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stylecss.css">
     <title>House of Rock-Casa de instrumentos musicales</title>
@@ -69,14 +70,18 @@
     <!--FIN DEL CONTENIDO PRINCIPAL-->
     <!--INICIO DEL FOOTER-->
     <footer class="footer"> 
-      <p id="bottomText" class="footer__disclaimer">Marca registrada de Musicos Felices S.A.S. Todos los derechos reservados. </p>
+      <p id="bottomText" class="footer__disclaimer" data-aos="fade-left" data-aos-anchor-placement="bottom-bottom">Marca registrada de Musicos Felices S.A.S. Todos los derechos reservados. </p>
       <ul class="footer__list">
-          <li><a href="#" class="footer__link"><i class="fab fa-facebook-square"></i></a></li>
-          <li><a href="#" class="footer__link"><i class="fab fa-instagram-square"></i></a></li>
-          <li><a href="#" class="footer__link"><i class="fab fa-twitter-square"></i></a></li>
+          <li><a href="#" class="footer__link"><i class="fab fa-facebook-square" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom"></i></a></li>
+          <li><a href="#" class="footer__link"><i class="fab fa-instagram-square" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom"></i></a></li>
+          <li><a href="#" class="footer__link"><i class="fab fa-twitter-square" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom"></i></a></li>
       </ul>
     </footer>
     <!--FIN DEL FOOTER-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
     <script src="https://kit.fontawesome.com/b2ab972afb.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
