--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/stylecss.css">
     <title>House of rock-Guitarras, bajos, baterias, amplificadores en Cordoba</title>
@@ -48,10 +49,10 @@
             <h1 class="productos__titulo">NUESTROS PRODUCTOS</h1>
             <nav class="productos__nav">
                 <ul>
-                    <li><a href="#guitarras" class="productos__opciones">Guitarras</a></li>
-                    <li><a href="#bajos" class="productos__opciones">Bajos</a></li>
-                    <li><a href="#baterias" class="productos__opciones">Baterias</a></li>
-                    <li><a href="#amplis" class="productos__opciones">Amplificadores</a></li>
+                    <li><a href="#guitarras" class="productos__opciones" data-aos="slide-right">Guitarras</a></li>
+                    <li><a href="#bajos" class="productos__opciones" data-aos="slide-right">Bajos</a></li>
+                    <li><a href="#baterias" class="productos__opciones" data-aos="slide-right">Baterias</a></li>
+                    <li><a href="#amplis" class="productos__opciones" data-aos="slide-right">Amplificadores</a></li>
                 </ul>
             </nav>
             <h2 class="productos__guitarra__titulo" id="guitarras">Guitarras</h2>
@@ -102,14 +103,18 @@
     </main>
     <!--INICIO DEL FOOTER-->
     <footer class="footer"> 
-      <p id="bottomText" class="footer__disclaimer">Marca registrada de Musicos Felices S.A.S. Todos los derechos reservados. </p>
+      <p id="bottomText" class="footer__disclaimer" data-aos="fade-left" data-aos-anchor-placement="bottom-bottom">Marca registrada de Musicos Felices S.A.S. Todos los derechos reservados. </p>
       <ul class="footer__list">
-          <li><a href="#" class="footer__link"><i class="fab fa-facebook-square"></i></a></li>
-          <li><a href="#" class="footer__link"><i class="fab fa-instagram-square"></i></a></li>
-          <li><a href="#" class="footer__link"><i class="fab fa-twitter-square"></i></a></li>
+          <li><a href="#" class="footer__link"><i class="fab fa-facebook-square" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom"></i></a></li>
+          <li><a href="#" class="footer__link"><i class="fab fa-instagram-square" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom"></i></a></li>
+          <li><a href="#" class="footer__link"><i class="fab fa-twitter-square" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom"></i></a></li>
       </ul>
   </footer>
     <!--FIN DEL FOOTER-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
     <script src="https://kit.fontawesome.com/b2ab972afb.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
