--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -44,6 +44,7 @@
           </nav>
     </header>
     <!--FIN DEL HEADER-->
+    <!--INICIO DEL CONTENIDO PRINCIPAL-->
     <main>
         <div class="productos">
             <h1 class="productos__titulo">NUESTROS PRODUCTOS</h1>
@@ -101,6 +102,7 @@
             </div>
         </div>
     </main>
+    <!--FIN DEL CONTENIDO PRINCIPAL-->
     <!--INICIO DEL FOOTER-->
     <footer class="footer"> 
       <p id="bottomText" class="footer__disclaimer" data-aos="fade-left" data-aos-anchor-placement="bottom-bottom">Marca registrada de Musicos Felices S.A.S. Todos los derechos reservados. </p>
