--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -58,9 +58,9 @@
             </nav>
             <h2 class="productos__guitarra__titulo" id="guitarras">Guitarras</h2>
             <div class="productos__guitarra__imagen">
-                <img src="../multimedia/Fender_Stratocaster_004-2-removebg-preview.png" alt="Fender Stratocaster" id="guitarOne">
-                <img src="../multimedia/Fender_Telecaster_American_Vintage_1952_transparent.png" alt="Fender Telecaster" id="guitarTwo">
-                <img src="../multimedia/gibsonLesPaul-removebg-preview.png" alt="Gibson Les Paul" id="guitarThree">
+                <img src="../multimedia/Fender_Stratocaster.png" alt="Guitarra Fender Stratocaster" id="guitarOne">
+                <img src="../multimedia/Fender_Telecaster_American_Vintage_1952.png" alt="Guitarra Fender Telecaster" id="guitarTwo">
+                <img src="../multimedia/gibsonLesPaul.png" alt="Guitarra Gibson Les Paul" id="guitarThree">
             </div>
             <div class="productos__guitarra__texto">
                 <p class="productos__guitarra__nombre">Fender Stratocaster</p>
@@ -69,9 +69,9 @@
             </div>        
             <h2 class="productos__bajo__titulo" id="bajos">Bajos</h2>
             <div class="productos__bajo__imagen"> 
-                <img src="../multimedia/fender-squier-mini-precision-bass-il-black_1_BAS0011010-000-removebg-preview.png" alt="Fender Squire Mini Precission" id="bassOne">
-                <img src="../multimedia/Fender-Standard-Jazz-Bass-Mexico-1-20635-1-removebg-preview.png" alt="Fender Standard Jazz Bass" id="bassTwo">
-                <img src="../multimedia/ibanez-GSR100EXBK-removebg-preview.png" alt="ibanez GSR100EXBK" id="bassThree">
+                <img src="../multimedia/fender-squier-mini-precision-bass.png" alt="Bajo Fender Squire Mini Precission" id="bassOne">
+                <img src="../multimedia/Fender-Standard-Jazz-Bass.png" alt="Bajo Fender Standard Jazz Bass" id="bassTwo">
+                <img src="../multimedia/ibanez-GSR100EXBK.png" alt="Bajo Ibanez GSR100EXBK" id="bassThree">
             </div>
             <div class="productos__bajo__texto">
                 <p class="productos__bajo__nombre">Fender Squier Mini Precission</p>
@@ -80,9 +80,9 @@
             </div>
             <h2 class="productos__bateria__titulo" id="baterias">Baterias</h2>
             <div class="productos__bateria__imagen">
-                <img src="../multimedia/bateria-acustica-shell-Ludwig-LC179X016-removebg-preview.png" alt="Set Ludwig Breakbeats" id="drumsOne">
-                <img src="../multimedia/bateria-musical-Tama-Club-Jam-removebg-preview.png" alt="Set Tama Club Jam" id="drumsTwo">
-                <img src="../multimedia/Pearl-Masters-MCT943XP-C346-removebg-preview.png" alt="Set Pearl Masters" id="drumsThree">
+                <img src="../multimedia/bateria-acustica-shell-Ludwig.png" alt="Set Ludwig Breakbeats" id="drumsOne">
+                <img src="../multimedia/bateria-musical-Tama-Club-Jam.png" alt="Set Tama Club Jam" id="drumsTwo">
+                <img src="../multimedia/Pearl-Masters-MCT943XP.png" alt="Set Pearl Masters" id="drumsThree">
             </div>
             <div class="productos__bateria__texto">
                 <p class="productos__bateria__nombre">Set Ludwig Breakbeats</p>
@@ -91,9 +91,9 @@
             </div>
             <h2 class="productos__amp__titulo" id="amplis">Amplificadores</h2>
             <div class="productos__amp__imagen">
-                <img src="../multimedia/Ampli-Fender-Champion-removebg-preview.png" alt="Fender Champion" id="ampOne">
-                <img src="../multimedia/Ampli-Valvular-Marshall-removebg-preview.png" alt="Marshall Valvular" id="ampTwo">
-                <img src="../multimedia/amplificador-line-6-spider-iv-de-15-watts_360x-removebg-preview.png" alt="Line 6 Spider IV" id="ampThree">
+                <img src="../multimedia/Ampli-Fender-Champion.png" alt="Amplificador Fender Champion" id="ampOne">
+                <img src="../multimedia/Ampli-Valvular-Marshall.png" alt="Amplificador Marshall Valvular" id="ampTwo">
+                <img src="../multimedia/amplificador-line-6-spider-iv.png" alt="Amplificador Line 6 Spider IV" id="ampThree">
             </div>
             <div class="productos__amp__texto">
                 <p class="productos__amp__nombre">Fender Champion</p>
