--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -51,10 +51,10 @@
         <p class="sobreNosotros__texto">Hacemos envíos a todo el país. No dudes en consultar nuestra pagina de <a href="./articulos.html" class="sobreNosotros__link">artículos</a> y comunicarte con nosotros desde <a href="./contacto.html" class="sobreNosotros__link">acá</a> o desde nuestras <a href="#bottomText" class="sobreNosotros__link">redes sociales</a></p>
       </div>
       <div class="pictures">
-        <img src="../multimedia/SN1 (1).jpg" alt="Casa de instrumentos" class="pictures__images"  data-aos="zoom-in">
-        <img src="../multimedia/SN2 (1).jpg" alt="Casa de instrumentos" class="pictures__images"  data-aos="zoom-in">
-        <img src="../multimedia/SN3.jpg" alt="Casa de instrumentos" class="pictures__images"  data-aos="zoom-in">
-        <img src="../multimedia/SN4 (1).jpg" alt="Casa de instrumentos" class="pictures__images"  data-aos="zoom-in">
+        <img src="../multimedia/SN1.jpg" alt="Foto de nuestro comercio" class="pictures__images"  data-aos="zoom-in">
+        <img src="../multimedia/SN2.jpg" alt="Guitarras colgadas en una pared" class="pictures__images"  data-aos="zoom-in">
+        <img src="../multimedia/SN3.jpg" alt="Amplificadores ordenados en un comercio" class="pictures__images"  data-aos="zoom-in">
+        <img src="../multimedia/SN4.jpg" alt="Guitarras antiguas a la venta" class="pictures__images"  data-aos="zoom-in">
       </div>
     </main>
     <!--FIN DEL CONTENIDO PRINCIPAL-->
