--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             <div class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./multimedia/home2.jpg" class="d-block w-100" class="img-fluid" alt="foto">
+                  <img src="./multimedia/home1.jpg" class="d-block w-100" class="img-fluid" alt="hombre tocando la guitarra">
                 </div>
                 <div class="carousel-item">
-                  <img src="./multimedia/home3.jpg" class="d-block w-100" class="img-fluid" alt="foto">
+                  <img src="./multimedia/home2.jpg" class="d-block w-100" class="img-fluid" alt="gente en un recital haciendo cuernos">
                 </div>
                 <div class="carousel-item">
-                  <img src="./multimedia/home4.jpg" class="d-block w-100" class="img-fluid" alt="foto">
+                  <img src="./multimedia/home3.jpg" class="d-block w-100" class="img-fluid" alt="hombre tocando la guitarra tras el humo">
                 </div>
               </div>
             </div>
