--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -101,7 +101,7 @@
               </div>
             </fieldset>
         </form>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217954.93388626844!2d-64.3344303707371!3d-31.399083974371262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432985f478f5b69%3A0xb0a24f9a5366b092!2zQ8OzcmRvYmE!5e0!3m2!1ses-419!2sar!4v1632091461870!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.494445889337!2d-64.23120388515956!3d-31.37292730128966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432992596ae46ed%3A0xc66e98f6ccb24643!2sGaler%C3%ADa%20Precedo!5e0!3m2!1ses-419!2sar!4v1634165329665!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </main>
     <!--FIN DEL CONTENIDO PRINCIPAL-->
     <!--INICIO DEL FOOTER-->
